# memorised-them-all

./: .coverage  .dockerignore  .gitignore  .mcp.json  .mcpbignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  constraints.txt  glama.json  graph.json  install.sh  launch.py  launch.sh  manifest.json  memory.md  mindmap.html  pyproject.toml  requirements.txt  server.json  vectors.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docker.yml  e2e.yml  release.yml
commands/: export-memory.md  forget.md  memorise.md  memory-map.md  memory-status.md  recall.md
docs/assistants/: chatgpt.md  claude.md  gemini.md  grok.md
docs/export-format/v1/: README.md  graph.schema.json
eval/: METHODOLOGY.md  baseline.json  bench.py  golden.json  run_eval.py
eval/corpus/: bengali.md  grid.md  marine.md  ops.md  solar.md
memory/: a.txt.md
mta/: __init__.py  __main__.py  cli.py  server.py  transport.py
mta/core/: __init__.py  _bangla_maps.py  _fuzz.py  _io.py  archive.py  backends.py  bangla_legacy.py  clients.py  config.py  convert.py  deps.py  digest.py  embed.py  extract.py  graph.py  interchange.py  lifecycle.py  locks.py  platform.py  recall.py  render.py  resolve.py  segment.py  setup.py  store.py  updater.py
mta/interop/: __init__.py  recipes.py  rest.py  schemas.py
program/: ACCEPTANCE.md  AUDIT.md  CONVERGENCE.md  CORPUS_NOTES.md  DECISIONS.md  IMPROVEMENT_PLAN.md  PROGRESS.md  PUBLISH_MANIFEST.md  REVIEW.md  RISKS.md  ROADMAP_V3.md  SESSION_LOG.md  TEST_REPORT.md  THEME_Z_PLAN.md  V2_PLAN.md  release-manifest.md
sample/: aurora-project.md  notes.txt
scripts/: build_mcpb.sh  check_versions.py  mta-launcher.sh
skills/memorise/: SKILL.md
templates/: mindmap.html.j2
tests/: mcp_stdio_check.py  test_archive_bomb.py  test_atomic_io.py  test_audit_fixes.py  test_autoconfig.py  test_backends.py  test_backlog_round3.py  test_bangla_legacy.py  test_bm25_cache.py  test_classical_extraction.py  test_cli_surface.py  test_clients.py  test_concurrency.py  test_conformance.py  test_conversion_e2e.py  test_convert_inline_fastpath.py  test_degraded_mode.py  test_doctor.py  test_e2e_cli.py  test_entity_subtypes.py  test_eval.py  test_export_format.py  test_fact_salience.py  test_fuzz_fallback.py  test_mcpb_windows.py  test_migration.py  test_numpy_free_core.py  test_provenance_spans.py  test_recall_filters.py  test_recall_offline.py  test_recall_provenance.py  test_render_notes.py  test_resolve.py  test_rest_gateway.py  test_review_fixes.py  test_schema_export.py  test_security.py  test_server_tools.py  test_setup_and_paths.py  test_smoke.py  (+9 more)
tests/fixtures/: data.xlsx  memo.docx  page.html  table.csv
