[build-system]
# Pin below 1.27: hatchling >=1.29 emits Metadata-Version 2.5, which current
# packaging/twine don't yet recognise (twine check fails). 1.26.x emits 2.3.
requires = ["hatchling>=1.21,<1.27"]
build-backend = "hatchling.build"

[project]
name = "memorised-them-all"
dynamic = ["version"]
description = "Local, token-free file → knowledge-graph memory for Claude. Convert any attachment to Markdown and digest it into a searchable graph + exportable notes, entirely on-device — deterministic and model-free (no LLM/Ollama/GPU)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Aninda Sundar Howlader", email = "225374119+GRU-953@users.noreply.github.com" }]
keywords = ["mcp", "claude", "knowledge-graph", "memory", "markitdown", "deterministic",
            "model-free", "token-free", "rag", "graphrag", "bm25", "bengali",
            "offline", "privacy", "ocr"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "mcp>=1.2",
  "numpy>=1.26",
  "networkx>=3.2",
  "rapidfuzz>=3.6",
  "psutil>=5.9",
  "markitdown[pdf,docx,pptx,xlsx,xls,outlook]>=0.1.6",
  "pdfplumber>=0.11",
  "pillow>=10.2",
  "pytesseract>=0.3.10",
  "pypdfium2>=4.27",
  "striprtf>=0.0.26",
]

[project.optional-dependencies]
# Preferred Leiden community detection (optional). NOTE: python-igraph + leidenalg
# are **GPL-licensed** and are NOT installed by the MIT core — which falls back to
# NetworkX Louvain. Install the `graph` extra only if GPL is acceptable to you.
graph = ["python-igraph>=0.11", "leidenalg>=0.10"]
# Test tooling.
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/GRU-953/memorised-them-all"
Repository = "https://github.com/GRU-953/memorised-them-all"
Issues = "https://github.com/GRU-953/memorised-them-all/issues"
Changelog = "https://github.com/GRU-953/memorised-them-all/blob/main/CHANGELOG.md"

[project.scripts]
mta = "mta.cli:main"

# Single source of truth for the version: mta/__init__.py:__version__.
# scripts/check_versions.py (run in CI) asserts the other manifests agree.
[tool.hatch.version]
path = "mta/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mta"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "mta/assets"

[tool.hatch.build.targets.sdist]
include = ["mta", "assets", "README.md", "LICENSE", "CHANGELOG.md",
           "ACKNOWLEDGEMENTS.md", "requirements.txt",
           "launch.py", "launch.sh", "install.sh", "scripts"]
